<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        app:layout_constraintBottom_toTopOf="@+id/transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"

        app:layout_constraintBottom_toTopOf="@+id/transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/transition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/click_this"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/username"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/black" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/firstname"
            android:layout_weight="1"
            android:textColorHint="@color/black"
            android:padding="10dp"
            android:layout_marginEnd="50dp"
            android:id="@+id/nestedll142"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/phone"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/black" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number"
            android:layout_weight="1"
            android:textColorHint="@color/black"
            android:padding="10dp"
            android:layout_marginEnd="50dp"
            android:id="@+id/nestedll2"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/e_mail"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/black" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/email_id"
            android:textColorHint="@color/black"
            android:padding="10dp"
            android:layout_marginEnd="50dp"
            android:id="@+id/nestedll4"/>

    </LinearLayout>


</LinearLayout>